working LSP mostly