@@ -10,6 +10,24 @@ application {
     applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
 
+tasks.named<CreateStartScripts>("startScripts") {
+    applicationName = "jmltk"
+    defaultJvmOpts = listOf("--enable-native-access=ALL-UNNAMED")
+}
+
+tasks.register<CreateStartScripts>("startLspScripts") {
+    description = "Create the jmltk-lsp start script"
+    applicationName = "jmltk-lsp"
+    mainClass = "io.github.jmltoolkit.lsp.Main"
+    classpath = tasks.named<CreateStartScripts>("startScripts").get().classpath
+    defaultJvmOpts = listOf("--enable-native-access=ALL-UNNAMED")
+    outputDir = layout.buildDirectory.file("install/jmltk/bin").get().asFile
+}
+
+//tasks.named("installDist") {
+//    dependsOn(tasks.named("startLspScripts"))
+//}
+
 distributions {
     main {
         contents {
@@ -33,4 +51,6 @@ dependencies {
     implementation(project(":tools:stat"))
     implementation(project(":tools:jml2java"))
     implementation(project(":tools:jmlstub"))
+
+    implementation(project(":tools:lsp"))
 }
